# annotator

./: .bumpversion.cfg  .gitignore  Makefile  README.md  requirements.txt  run.sh  setup.cfg  setup.py
.github/workflows/: build.yml
annotator/: __main__.py  app.py  configure.py  utils.py
annotator/assets/: styles.css
annotator/callbacks/: __init__.py  annotator.py  config.py
annotator/layout/: __init__.py  common.py  config.py  main.py
annotator/tests/: test_all.py
