[bdist_wheel]
universal=1

[metadata]
description_file = README.md
long_description_content_type=text/markdown

[flake8]
ignore=E203, W503
max-line-length=200
per-file-ignores=
    annotator/__init__.py:F401
    annotator/__main__.py:F401,F403
    annotator/callbacks/__init__.py:F401,F403
    annotator/layout/__init__.py:F401,F403
